# automation-with-ai

./: README.md  references.yaml
casts/: pdm-add.cast  pdm-init.cast
docs/0-setup-python/: README.md
qrpa/: .gitignore  README.md  pyproject.toml
qrpa/docs/pdf/: pdf-table-extraction-guide.md
qrpa/src/qrpa/file_mrg/: file_mgt.py
qrpa/src/qrpa/news/: drission_page_fetcher.py
qrpa/src/qrpa/pdf_worker/: tables.py
qrpa/tests/excels/: barchart.xlsx  pivot_table.xlsx  report.xlsx  report_february.xlsx  report_january.xlsx  test_excel_handlers.py
qrpa/tests/news/: test_drission_page_fetcher.py
qrpa/tests/pdf/: output.csv  test_tables.py
